--- a/index.html
+++ b/index.html
@@ -13,13 +13,109 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Theme  -->
     <html data-theme="light"></html>
-
+    <!-- custom Color  -->
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              clifford: "#da373d",
+              primary: "#abef5f", // Removed quotes around 'primary'
+            },
+          },
+        },
+      };
+    </script>
   </head>
   <body>
-    <header>
-        <h3>hello </h3>
+    <header class="">
+      <div class="navbar bg-base-100">
+        <div class="navbar-start">
+          <div class="dropdown">
+            <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-5 w-5"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M4 6h16M4 12h8m-8 6h16"
+                />
+              </svg>
+            </div>
+            <!-- Corrected this ul element by removing the extra nested ul -->
+            <ul
+              tabindex="0"
+              class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow"
+            >
+              <li><a>Home</a></li>
+              <li><a>Services</a></li>
+              <li><a>Portfolio</a></li>
+              <li><a>Blogs</a></li>
+              <li><a>Contact Us</a></li>
+            </ul>
+          </div>
+          <a class="btn btn-ghost text-xl primary">Rinterio</a>
+        </div>
+        <div class="navbar-center hidden lg:flex">
+          <ul class="menu menu-horizontal px-1">
+            <li><a>Home</a></li>
+            <li><a>Services</a></li>
+            <li><a>Portfolio</a></li>
+            <li><a>Blogs</a></li>
+            <li><a>Contact Us</a></li>
+          </ul>
+        </div>
+        <div class="navbar-end">
+          <a class="btn">Button</a>
+        </div>
+      </div>
     </header>
-    <main></main>
+
+    <main class="">
+      <!-- Banner -->
+      <button
+  class="rounded pt-2 pb-2 pr-6 pl-6 mt-6 bg-primary text-black inline-flex items-center space-x-2 hover:bg-[rgba(171,239,95,0.5)] transition-colors duration-300"
+>
+  View Details
+  <svg
+    width="13.505737"
+    height="13.500488"
+    viewBox="0 0 13.5057 13.5005"
+    fill="none"
+    xmlns="http://www.w3.org/2000/svg"
+    xmlns:xlink="http://www.w3.org/1999/xlink"
+  >
+    <desc>Created with Pixso.</desc>
+    <defs />
+    <path
+      id="Vector"
+      d="M11.75 1.75L0.75 12.74"
+      stroke="#1C1C1C"
+      stroke-opacity="1.000000"
+      stroke-width="1.500000"
+      stroke-linecap="round"
+    />
+    <path
+      id="Vector"
+      d="M5.75 0.88C5.75 0.88 11.39 0.4 12.24 1.26C13.1 2.11 12.62 7.75 12.62 7.75"
+      stroke="#1C1C1C"
+      stroke-opacity="1.000000"
+      stroke-width="1.500000"
+      stroke-linejoin="round"
+      stroke-linecap="round"
+    />
+  </svg>
+</button>
+
+
+      <!-- Banner -->
+    </main>
 
     <footer></footer>
   </body>
