added tweo section with responsive

--- a/index.html
+++ b/index.html
@@ -79,42 +79,203 @@
 
     <main class="">
       <!-- Banner -->
-      <button
-  class="rounded pt-2 pb-2 pr-6 pl-6 mt-6 bg-primary text-black inline-flex items-center space-x-2 hover:bg-[rgba(171,239,95,0.5)] transition-colors duration-300"
->
-  View Details
-  <svg
-    width="13.505737"
-    height="13.500488"
-    viewBox="0 0 13.5057 13.5005"
-    fill="none"
-    xmlns="http://www.w3.org/2000/svg"
-    xmlns:xlink="http://www.w3.org/1999/xlink"
-  >
-    <desc>Created with Pixso.</desc>
-    <defs />
-    <path
-      id="Vector"
-      d="M11.75 1.75L0.75 12.74"
-      stroke="#1C1C1C"
-      stroke-opacity="1.000000"
-      stroke-width="1.500000"
-      stroke-linecap="round"
-    />
-    <path
-      id="Vector"
-      d="M5.75 0.88C5.75 0.88 11.39 0.4 12.24 1.26C13.1 2.11 12.62 7.75 12.62 7.75"
-      stroke="#1C1C1C"
-      stroke-opacity="1.000000"
-      stroke-width="1.500000"
-      stroke-linejoin="round"
-      stroke-linecap="round"
-    />
-  </svg>
-</button>
-
-
+      <section class="max-w-6xl mx-auto">
+        <div class="banner-img flex justify-center mx-auto">
+          <img src="assets/banner.png" alt="" />
+        </div>
+        <div class="text text-center">
+          <h1 class="text-3xl lg:text-6xl mt-4 mb-4">
+            A barn house of this design has a striking appearance
+          </h1>
+          <p class="m-4">
+            The barn house captivates with its blend of rustic charm and modern
+            sophistication, featuring weathered wood, sleek metal accents, and
+            large windows that flood the space with natural light.
+          </p>
+        </div>
+        <div class="flex justify-center items-center">
+          <button
+            class="m-4 rounded-3xl justify-center pt-2 pb-2 pr-6 pl-6 mt-6 bg-primary text-black inline-flex items-center space-x-2 hover:bg-[rgba(171,239,95,0.5)] transition-colors duration-300"
+          >
+            View Details
+            <svg
+              width="13.505737"
+              height="13.500488"
+              viewBox="0 0 13.5057 13.5005"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+            >
+              <desc>Created with Pixso.</desc>
+              <defs />
+              <path
+                id="Vector"
+                d="M11.75 1.75L0.75 12.74"
+                stroke="#1C1C1C"
+                stroke-opacity="1.000000"
+                stroke-width="1.500000"
+                stroke-linecap="round"
+              />
+              <path
+                id="Vector"
+                d="M5.75 0.88C5.75 0.88 11.39 0.4 12.24 1.26C13.1 2.11 12.62 7.75 12.62 7.75"
+                stroke="#1C1C1C"
+                stroke-opacity="1.000000"
+                stroke-width="1.500000"
+                stroke-linejoin="round"
+                stroke-linecap="round"
+              />
+            </svg>
+          </button>
+        </div>
+      </section>
       <!-- Banner -->
+
+      <!-- We design thoughtful, liveable spaces -->
+      <section class="bg-[#A0A0A0] text-[rgb(33, 33, 33)]">
+        <!-- Text and Image Container -->
+        <div
+          class="mt-6 max-w-6xl mx-auto flex flex-col lg:flex-row items-center lg:items-start"
+        >
+          <!-- Text Div -->
+          <div class="flex flex-col lg:mt-20 lg:w-1/2 px-6 lg:px-0">
+            <div>
+              <h1 class="text-3xl lg:text-6xl">
+                We design thoughtful, liveable spaces
+              </h1>
+              <p class="mt-5">
+                The barn house captivates with its blend of rustic charm and
+                modern sophistication, featuring weathered wood, sleek metal
+                accents.
+              </p>
+            </div>
+
+            <!-- Card 1 -->
+            <div
+              class="mt-4 mb-4 pl-10 card card-side bg-base-100 shadow-xl w-full lg:w-10/12"
+            >
+              <figure>
+                <img src="assets/commercial.png" alt="Commercial space" />
+              </figure>
+              <div class="card-body">
+                <h2 class="card-title">Commercial</h2>
+                <p>
+                  The barn house captivates with its blend of rustic charm and
+                  modern sophistication.
+                </p>
+              </div>
+            </div>
+
+            <!-- Card 2 -->
+            <div
+              class="mt-2 mb-4 pl-10 card card-side bg-base-100 shadow-xl w-full lg:w-10/12"
+            >
+              <figure>
+                <img src="assets/residential.png" alt="Residential space" />
+              </figure>
+              <div class="card-body">
+                <h2 class="card-title">Residential</h2>
+                <p>
+                  The barn house captivates with its blend of rustic charm and
+                  modern sophistication.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <!-- Image Div (assets/Rectangle.png) -->
+          <div
+            class="mt-4 p-4 lg:mt-24 lg:ml-10 lg:w-1/2 flex justify-center lg:justify-end"
+          >
+            <img
+              src="assets/Rectangle.png"
+              alt="Rectangle"
+              class="w-full lg:w-auto max-w-lg"
+            />
+          </div>
+        </div>
+      </section>
+      <!-- We design thoughtful, liveable spaces -->
+
+      <!-- Our Works Process -->
+      <section class="bg-base-200 py-16">
+        <!-- Header Section -->
+        <div class="text-center max-w-3xl mx-auto">
+          <span class="badge badge-outline mb-4">How we work</span>
+          <h2 class="text-4xl font-semibold mb-4">Our Works Process</h2>
+          <p class="text-gray-500">
+            The barn house captivates with its blend of rustic charm and modern
+            sophistication, featuring weathered wood, sleek metal accents.
+          </p>
+        </div>
+
+        <!-- Process Cards Section -->
+        <div
+          class="mt-12 flex flex-col lg:flex-row justify-center items-center gap-6"
+        >
+          <!-- Card 1 -->
+          <div class="card w-80 bg-[#e7c1d3] shadow-lg">
+            <div class="card-body">
+              <div class="flex items-center">
+                <span class="text-2xl"
+                  ><img src="assets/concept.png" alt=""
+                /></span>
+                <h3 class="text-lg font-semibold ml-2">Concept</h3>
+              </div>
+              <p class="text-gray-600 mt-2">
+                The barn house captivates with its blend of rustic charm and
+                modern.
+              </p>
+            </div>
+          </div>
+
+          <!-- Card 2 -->
+          <div class="card w-80 bg-[#efda6e] shadow-lg">
+            <div class="card-body">
+              <div class="flex items-center">
+                <span class="text-2xl"
+                  ><img src="assets/flow-chart.png" alt=""
+                /></span>
+                <h3 class="text-lg font-semibold ml-2">Design Process</h3>
+              </div>
+              <p class="text-gray-600 mt-2">
+                The barn house captivates with its blend of rustic charm and
+                modern.
+              </p>
+            </div>
+          </div>
+
+          <!-- Card 3 -->
+          <div class="card w-80 bg-[#a4dac3] shadow-lg">
+            <div class="card-body">
+              <div class="flex items-center">
+                <span class="text-2xl"><img src="assets/vision.png" alt=""></span>
+                <h3 class="text-lg font-semibold ml-2">Supervision</h3>
+              </div>
+              <p class="text-gray-600 mt-2">
+                The barn house captivates with its blend of rustic charm and
+                modern.
+              </p>
+            </div>
+          </div>
+
+          <!-- Card 4 -->
+          <div class="card w-80 [#77aaea] shadow-lg">
+            <div class="card-body">
+              <div class="flex items-center">
+                <span class="text-2xl"><img src="assets/budget-planning.png" alt=""></span>
+                <h3 class="text-lg font-semibold ml-2">Budget Planning</h3>
+              </div>
+              <p class="text-gray-600 mt-2">
+                The barn house captivates with its blend of rustic charm and
+                modern.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Our Works Process -->
     </main>
 
     <footer></footer>
