work the bonus section

--- a/index.html
+++ b/index.html
@@ -249,7 +249,9 @@
           <div class="card w-80 bg-[#a4dac3] shadow-lg">
             <div class="card-body">
               <div class="flex items-center">
-                <span class="text-2xl"><img src="assets/vision.png" alt=""></span>
+                <span class="text-2xl"
+                  ><img src="assets/vision.png" alt=""
+                /></span>
                 <h3 class="text-lg font-semibold ml-2">Supervision</h3>
               </div>
               <p class="text-gray-600 mt-2">
@@ -260,10 +262,12 @@
           </div>
 
           <!-- Card 4 -->
-          <div class="card w-80 [#77aaea] shadow-lg">
+          <div class="card w-80 bg-[#77aaea] shadow-lg">
             <div class="card-body">
               <div class="flex items-center">
-                <span class="text-2xl"><img src="assets/budget-planning.png" alt=""></span>
+                <span class="text-2xl"
+                  ><img src="assets/budget-planning.png" alt=""
+                /></span>
                 <h3 class="text-lg font-semibold ml-2">Budget Planning</h3>
               </div>
               <p class="text-gray-600 mt-2">
@@ -274,10 +278,232 @@
           </div>
         </div>
       </section>
-
       <!-- Our Works Process -->
+
+      <!-- Let’s Discuss Next Project -->
+      <section class="bg-gray-100 py-16 px-4">
+        <!-- Header Section -->
+        <div class="text-center max-w-2xl mx-auto mb-8">
+          <button
+            class="badge badge-outline text-sm mb-4 px-4 py-2 bg-green-100 text-green-700"
+          >
+            Let's Connect
+          </button>
+          <h2 class="text-3xl lg:text-4xl font-semibold mb-4">
+            Let's Discuss Next Project
+          </h2>
+          <p class="text-gray-500">
+            The barn house captivates with its blend of rustic charm and modern
+            sophistication, featuring weathered wood, sleek metal accents.
+          </p>
+        </div>
+
+        <!-- Form Section -->
+        <form
+          class="max-w-3xl mx-auto bg-white p-8 rounded-xl shadow-md space-y-6"
+        >
+          <div
+            class="flex flex-col lg:flex-row lg:space-x-4 space-y-4 lg:space-y-0"
+          >
+            <input
+              type="text"
+              placeholder="First Name"
+              class="input input-bordered w-full rounded-full"
+            />
+            <input
+              type="text"
+              placeholder="Last Name"
+              class="input input-bordered w-full rounded-full"
+            />
+          </div>
+          <div
+            class="flex flex-col lg:flex-row lg:space-x-4 space-y-4 lg:space-y-0"
+          >
+            <input
+              type="tel"
+              placeholder="Phone Number"
+              class="input input-bordered w-full rounded-full"
+            />
+            <input
+              type="email"
+              placeholder="Email Number"
+              class="input input-bordered w-full rounded-full"
+            />
+          </div>
+          <textarea
+            placeholder="Write your message here"
+            class="textarea textarea-bordered w-full rounded-xl h-32"
+          ></textarea>
+
+          <!-- Submit Button -->
+          <div class="flex justify-center items-center">
+            <button
+              class="m-4 rounded-3xl justify-center pt-2 pb-2 pr-6 lg:pr-40 pl-6 lg:pl-40 mt-6 bg-primary text-black inline-flex items-center space-x-2 hover:bg-[rgba(171,239,95,0.5)] transition-colors duration-300"
+            >
+              View Details
+              <svg
+                width="13.505737"
+                height="13.500488"
+                viewBox="0 0 13.5057 13.5005"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+              >
+                <desc>Created with Pixso.</desc>
+                <defs />
+                <path
+                  id="Vector"
+                  d="M11.75 1.75L0.75 12.74"
+                  stroke="#1C1C1C"
+                  stroke-opacity="1.000000"
+                  stroke-width="1.500000"
+                  stroke-linecap="round"
+                />
+                <path
+                  id="Vector"
+                  d="M5.75 0.88C5.75 0.88 11.39 0.4 12.24 1.26C13.1 2.11 12.62 7.75 12.62 7.75"
+                  stroke="#1C1C1C"
+                  stroke-opacity="1.000000"
+                  stroke-width="1.500000"
+                  stroke-linejoin="round"
+                  stroke-linecap="round"
+                />
+              </svg>
+            </button>
+          </div>
+        </form>
+      </section>
+      <!-- Let’s Discuss Next Project -->
+
+      <!-- Our Latest Portfolio -->
+      <section class="max-w-6xl mx-auto py-10 px-4">
+        <h2 class="text-3xl font-bold text-center mb-4">
+          Our Latest Portfolio
+        </h2>
+        <p class="text-center text-gray-600 mb-8">
+          The barn house captivates with its blend of rustic charm and modern
+          sophistication, featuring weathered wood, sleek metal accents.
+        </p>
+
+        <!-- 1st card -->
+         div
+         
+      </section>
+
+      <!-- Our Latest Portfolio -->
     </main>
 
-    <footer></footer>
+    <!--  Footer  -->
+    <footer class="bg-neutral-900 text-center text-neutral-400 py-8 px-4">
+      <div
+        class="container mx-auto flex flex-col gap-12 items-center lg:justify-between space-y-6 lg:space-y-0"
+      >
+        <!-- Logo and Description Section -->
+        <div class="flex flex-col items-center lg:items-start space-y-3">
+          <div class="flex items-center space-x-2">
+            <!-- Circle Icon Background -->
+            <div
+              class="bg-lime-500 w-8 h-8 rounded-full flex items-center justify-center"
+            >
+              <!-- Icon inside the circle -->
+              <span class="text-neutral-900 font-bold text-lg">
+                <svg
+                  width="13.505737"
+                  height="13.500488"
+                  viewBox="0 0 13.5057 13.5005"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                >
+                  <desc>Created with Pixso.</desc>
+                  <defs />
+                  <path
+                    id="Vector"
+                    d="M11.75 1.75L0.75 12.74"
+                    stroke="#1C1C1C"
+                    stroke-opacity="1.000000"
+                    stroke-width="1.500000"
+                    stroke-linecap="round"
+                  />
+                  <path
+                    id="Vector"
+                    d="M5.75 0.88C5.75 0.88 11.39 0.4 12.24 1.26C13.1 2.11 12.62 7.75 12.62 7.75"
+                    stroke="#1C1C1C"
+                    stroke-opacity="1.000000"
+                    stroke-width="1.500000"
+                    stroke-linejoin="round"
+                    stroke-linecap="round"
+                  />
+                </svg>
+              </span>
+              <!-- Replace 'R' with actual logo if available -->
+            </div>
+            <h1 class="text-2xl font-semibold text-neutral-100">Rinterio</h1>
+          </div>
+          <p class="text-sm max-w-xs text-neutral-400 text-center lg:text-left">
+            The barn house captivates with its blend of rustic charm and modern
+            sophistication, featuring weathered wood, sleek metal accents.
+          </p>
+        </div>
+
+        <!-- Navigation Links Section -->
+        <div
+          class="flex flex-col lg:flex-row items-center space-y-3 lg:space-y-0 lg:space-x-16"
+        >
+          <a href="#" class="text-neutral-400 hover:text-neutral-100 transition"
+            >Home</a
+          >
+          <a href="#" class="text-neutral-400 hover:text-neutral-100 transition"
+            >Services</a
+          >
+          <a href="#" class="text-neutral-400 hover:text-neutral-100 transition"
+            >Portfolio</a
+          >
+          <a href="#" class="text-neutral-400 hover:text-neutral-100 transition"
+            >Blogs</a
+          >
+          <a href="#" class="text-neutral-400 hover:text-neutral-100 transition"
+            >Contact Us</a
+          >
+        </div>
+
+        <!-- Call-to-Action Button Section -->
+        <div>
+          <button
+            class="flex items-center bg-lime-500 text-neutral-900 font-medium px-6 py-2 rounded-full hover:bg-lime-600 transition"
+          >
+            <span>Book Consult</span>
+            <svg
+              width="13.505737"
+              height="13.500488"
+              viewBox="0 0 13.5057 13.5005"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+            >
+              <desc>Created with Pixso.</desc>
+              <defs />
+              <path
+                id="Vector"
+                d="M11.75 1.75L0.75 12.74"
+                stroke="#1C1C1C"
+                stroke-opacity="1.000000"
+                stroke-width="1.500000"
+                stroke-linecap="round"
+              />
+              <path
+                id="Vector"
+                d="M5.75 0.88C5.75 0.88 11.39 0.4 12.24 1.26C13.1 2.11 12.62 7.75 12.62 7.75"
+                stroke="#1C1C1C"
+                stroke-opacity="1.000000"
+                stroke-width="1.500000"
+                stroke-linejoin="round"
+                stroke-linecap="round"
+              />
+            </svg>
+          </button>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
