--- a/index.html
+++ b/index.html
@@ -401,12 +401,12 @@
         </p>
 
         <!-- 1st card -->
-        <div class="grid grid-cols-4 grid-rows-2 gap-4 p-4">
+        <div class="grid flex-col lg:grid-cols-4 lg:grid-rows-2 gap-4 p-4">
           <!-- Row 1, Column 3 -->
           <div
             class="card col-span-3 flex flex-col lg:flex-row card-side bg-base-100"
           >
-            <figure>
+            <figure class="w-[85%] h-[85%]">
               <img src="assets/img1.png" alt="home" />
             </figure>
             <div class="card-body">
@@ -417,23 +417,55 @@
                 and modern .
               </p>
               <div class="card-actions justify-start">
-                <button class="btn btn-primary">View Details</button>
+                <button
+              class="m-4 rounded-3xl justify-center pt-2 pb-2 pr-6  pl-6 mt-6 bg-primary text-black inline-flex items-center space-x-2 hover:bg-[rgba(171,239,95,0.5)] transition-colors duration-300"
+            >
+              View Details
+              <svg
+                width="13.505737"
+                height="13.500488"
+                viewBox="0 0 13.5057 13.5005"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+              >
+                <desc>Created with Pixso.</desc>
+                <defs />
+                <path
+                  id="Vector"
+                  d="M11.75 1.75L0.75 12.74"
+                  stroke="#1C1C1C"
+                  stroke-opacity="1.000000"
+                  stroke-width="1.500000"
+                  stroke-linecap="round"
+                />
+                <path
+                  id="Vector"
+                  d="M5.75 0.88C5.75 0.88 11.39 0.4 12.24 1.26C13.1 2.11 12.62 7.75 12.62 7.75"
+                  stroke="#1C1C1C"
+                  stroke-opacity="1.000000"
+                  stroke-width="1.500000"
+                  stroke-linejoin="round"
+                  stroke-linecap="round"
+                />
+              </svg>
+            </button>
               </div>
             </div>
           </div>
 
           <!-- Row 1, Column 4 -->
-          <figure class="px-10 pt-10">
+          <figure class="h-full w-full :w-[90%] lg:h-[90%]">
             <img src="assets/img2.png" alt="Shoes" class="rounded-xl" />
           </figure>
           <!-- Row 2, Column 1 -->
-          <figure class="px-10 pt-10">
+          <figure class="w-full h-full lg:mt-7">
             <img src="assets/img3.png" alt="Shoes" class="rounded-xl card" />
           </figure>
           <!-- Row 2, Column 2 -->
-          <div class="card col-span-2 card-side bg-base-100">
-            <figure>
-              <img src="assets/img4.png" alt="Movie" />
+          <div class="card col-span-2 flex card-side bg-base-100">
+            <figure class="w-full h-full">
+              <img src="assets/img4.png" alt="Shoes" class="rounded-xl card" />
             </figure>
             <div class="card-body">
               <h2 class="card-title">Commercial!</h2>
@@ -442,12 +474,44 @@
                 modern.
               </p>
               <div class="card-actions justify-start">
-                <button class="btn btn-primary">View Details</button>
+                <button
+              class="m-4 rounded-3xl justify-center pt-2 pb-2 pr-6  pl-6  bg-primary text-black inline-flex items-center space-x-2 hover:bg-[rgba(171,239,95,0.5)] transition-colors duration-300"
+            >
+              View Details
+              <svg
+                width="13.505737"
+                height="13.500488"
+                viewBox="0 0 13.5057 13.5005"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+              >
+                <desc>Created with Pixso.</desc>
+                <defs />
+                <path
+                  id="Vector"
+                  d="M11.75 1.75L0.75 12.74"
+                  stroke="#1C1C1C"
+                  stroke-opacity="1.000000"
+                  stroke-width="1.500000"
+                  stroke-linecap="round"
+                />
+                <path
+                  id="Vector"
+                  d="M5.75 0.88C5.75 0.88 11.39 0.4 12.24 1.26C13.1 2.11 12.62 7.75 12.62 7.75"
+                  stroke="#1C1C1C"
+                  stroke-opacity="1.000000"
+                  stroke-width="1.500000"
+                  stroke-linejoin="round"
+                  stroke-linecap="round"
+                />
+              </svg>
+            </button>
               </div>
             </div>
           </div>
           <!-- Row 2, Column 4 -->
-          <figure class="px-10 pt-10">
+          <figure class="w-full h-full lg:mt-7">
             <img src="assets/img5.png" alt="Shoes" class="rounded-xl card" />
           </figure>
         </div>
