added a new secion

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       .manrope-unique-class {
         font-family: "Manrope", sans-serif;
         font-optical-sizing: auto;
-        font-weight: 400; 
+        font-weight: 400;
         font-style: normal;
       }
     </style>
@@ -418,38 +418,38 @@
               </p>
               <div class="card-actions justify-start">
                 <button
-              class="m-4 rounded-3xl justify-center pt-2 pb-2 pr-6  pl-6 mt-6 bg-primary text-black inline-flex items-center space-x-2 hover:bg-[rgba(171,239,95,0.5)] transition-colors duration-300"
-            >
-              View Details
-              <svg
-                width="13.505737"
-                height="13.500488"
-                viewBox="0 0 13.5057 13.5005"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink"
-              >
-                <desc>Created with Pixso.</desc>
-                <defs />
-                <path
-                  id="Vector"
-                  d="M11.75 1.75L0.75 12.74"
-                  stroke="#1C1C1C"
-                  stroke-opacity="1.000000"
-                  stroke-width="1.500000"
-                  stroke-linecap="round"
-                />
-                <path
-                  id="Vector"
-                  d="M5.75 0.88C5.75 0.88 11.39 0.4 12.24 1.26C13.1 2.11 12.62 7.75 12.62 7.75"
-                  stroke="#1C1C1C"
-                  stroke-opacity="1.000000"
-                  stroke-width="1.500000"
-                  stroke-linejoin="round"
-                  stroke-linecap="round"
-                />
-              </svg>
-            </button>
+                  class="m-4 rounded-3xl justify-center pt-2 pb-2 pr-6 pl-6 mt-6 bg-primary text-black inline-flex items-center space-x-2 hover:bg-[rgba(171,239,95,0.5)] transition-colors duration-300"
+                >
+                  View Details
+                  <svg
+                    width="13.505737"
+                    height="13.500488"
+                    viewBox="0 0 13.5057 13.5005"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink"
+                  >
+                    <desc>Created with Pixso.</desc>
+                    <defs />
+                    <path
+                      id="Vector"
+                      d="M11.75 1.75L0.75 12.74"
+                      stroke="#1C1C1C"
+                      stroke-opacity="1.000000"
+                      stroke-width="1.500000"
+                      stroke-linecap="round"
+                    />
+                    <path
+                      id="Vector"
+                      d="M5.75 0.88C5.75 0.88 11.39 0.4 12.24 1.26C13.1 2.11 12.62 7.75 12.62 7.75"
+                      stroke="#1C1C1C"
+                      stroke-opacity="1.000000"
+                      stroke-width="1.500000"
+                      stroke-linejoin="round"
+                      stroke-linecap="round"
+                    />
+                  </svg>
+                </button>
               </div>
             </div>
           </div>
@@ -475,38 +475,38 @@
               </p>
               <div class="card-actions justify-start">
                 <button
-              class="m-4 rounded-3xl justify-center pt-2 pb-2 pr-6  pl-6  bg-primary text-black inline-flex items-center space-x-2 hover:bg-[rgba(171,239,95,0.5)] transition-colors duration-300"
-            >
-              View Details
-              <svg
-                width="13.505737"
-                height="13.500488"
-                viewBox="0 0 13.5057 13.5005"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink"
-              >
-                <desc>Created with Pixso.</desc>
-                <defs />
-                <path
-                  id="Vector"
-                  d="M11.75 1.75L0.75 12.74"
-                  stroke="#1C1C1C"
-                  stroke-opacity="1.000000"
-                  stroke-width="1.500000"
-                  stroke-linecap="round"
-                />
-                <path
-                  id="Vector"
-                  d="M5.75 0.88C5.75 0.88 11.39 0.4 12.24 1.26C13.1 2.11 12.62 7.75 12.62 7.75"
-                  stroke="#1C1C1C"
-                  stroke-opacity="1.000000"
-                  stroke-width="1.500000"
-                  stroke-linejoin="round"
-                  stroke-linecap="round"
-                />
-              </svg>
-            </button>
+                  class="m-4 rounded-3xl justify-center pt-2 pb-2 pr-6 pl-6 bg-primary text-black inline-flex items-center space-x-2 hover:bg-[rgba(171,239,95,0.5)] transition-colors duration-300"
+                >
+                  View Details
+                  <svg
+                    width="13.505737"
+                    height="13.500488"
+                    viewBox="0 0 13.5057 13.5005"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink"
+                  >
+                    <desc>Created with Pixso.</desc>
+                    <defs />
+                    <path
+                      id="Vector"
+                      d="M11.75 1.75L0.75 12.74"
+                      stroke="#1C1C1C"
+                      stroke-opacity="1.000000"
+                      stroke-width="1.500000"
+                      stroke-linecap="round"
+                    />
+                    <path
+                      id="Vector"
+                      d="M5.75 0.88C5.75 0.88 11.39 0.4 12.24 1.26C13.1 2.11 12.62 7.75 12.62 7.75"
+                      stroke="#1C1C1C"
+                      stroke-opacity="1.000000"
+                      stroke-width="1.500000"
+                      stroke-linejoin="round"
+                      stroke-linecap="round"
+                    />
+                  </svg>
+                </button>
               </div>
             </div>
           </div>
@@ -518,6 +518,75 @@
       </section>
 
       <!-- Our Latest Portfolio -->
+
+      <!-- FAQ -->
+      <!-- FAQ Section -->
+      <section class="bg-base-200 py-16 px-4">
+        <div class="max-w-6xl mx-auto">
+          <!-- Header -->
+          <div class="text-center mb-8">
+            <h2 class="text-4xl font-semibold mb-4">
+              Frequently Asked Questions
+            </h2>
+            <p class="text-gray-500">
+              Here are some common questions about our services.
+            </p>
+          </div>
+
+          <!-- Accordion -->
+          <div class="collapse collapse-plus bg-base-200 mb-4">
+            <input type="radio" name="faq-accordion" checked="checked" />
+            <div class="collapse-title text-xl font-medium">
+              What services do you offer?
+            </div>
+            <div class="collapse-content">
+              <p>
+                We offer a range of services including commercial and
+                residential design, budget planning, and project supervision.
+              </p>
+            </div>
+          </div>
+          <div class="collapse collapse-plus bg-base-200 mb-4">
+            <input type="radio" name="faq-accordion" />
+            <div class="collapse-title text-xl font-medium">
+              How can I get in touch for a consultation?
+            </div>
+            <div class="collapse-content">
+              <p>
+                You can book a consultation through our contact form on the
+                website or by clicking the "Book Consult" button.
+              </p>
+            </div>
+          </div>
+          <div class="collapse collapse-plus bg-base-200 mb-4">
+            <input type="radio" name="faq-accordion" />
+            <div class="collapse-title text-xl font-medium">
+              What is your design process?
+            </div>
+            <div class="collapse-content">
+              <p>
+                Our design process includes initial concept development,
+                detailed design, and supervision throughout the project to
+                ensure quality and client satisfaction.
+              </p>
+            </div>
+          </div>
+          <div class="collapse collapse-plus bg-base-200 mb-4">
+            <input type="radio" name="faq-accordion" />
+            <div class="collapse-title text-xl font-medium">
+              What are your rates?
+            </div>
+            <div class="collapse-content">
+              <p>
+                Our rates vary depending on the scope of the project. Please
+                contact us for a detailed quote tailored to your needs.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- FAQ -->
     </main>
 
     <!--  Footer  -->
