--- a/index.html
+++ b/index.html
@@ -41,11 +41,60 @@
         font-style: normal;
       }
     </style>
+    <!-- Font Awsome CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+
   </head>
   <body class="manrope-unique-class">
     <header class="">
       <div class="navbar bg-base-100">
         <div class="navbar-start">
+          <!-- heere drop dow -->
+          <!-- heere drop dow -->
+          <a class="btn btn-ghost text-xl primary"
+            ><span>
+              <svg
+                class="bg-primary"
+                width="13.505737"
+                height="13.500488"
+                viewBox="0 0 13.5057 13.5005"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+              >
+                <desc>Created with Pixso.</desc>
+                <defs />
+                <path
+                  id="Vector"
+                  d="M11.75 1.75L0.75 12.74"
+                  stroke="#1C1C1C"
+                  stroke-opacity="1.000000"
+                  stroke-width="1.500000"
+                  stroke-linecap="round"
+                />
+                <path
+                  id="Vector"
+                  d="M5.75 0.88C5.75 0.88 11.39 0.4 12.24 1.26C13.1 2.11 12.62 7.75 12.62 7.75"
+                  stroke="#1C1C1C"
+                  stroke-opacity="1.000000"
+                  stroke-width="1.500000"
+                  stroke-linejoin="round"
+                  stroke-linecap="round"
+                /></svg></span
+            >Rinterio</a
+          >
+        </div>
+        <div class="navbar-center hidden lg:flex">
+          <ul class="menu menu-horizontal px-1">
+            <li><a>Home</a></li>
+            <li><a>Services</a></li>
+            <li><a>Portfolio</a></li>
+            <li><a>Blogs</a></li>
+            <li><a>Contact Us</a></li>
+          </ul>
+        </div>
+        <div class="navbar-end ">
+          <!-- Drop Down -->
           <div class="dropdown">
             <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
               <svg
@@ -63,31 +112,46 @@
                 />
               </svg>
             </div>
-            <!-- Corrected this ul element by removing the extra nested ul -->
-            <ul
-              tabindex="0"
-              class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow"
+
+          <!-- Drop Down -->
+          
+          <div class=" hidden lg:flex lg:items-center lg:justify-center text-center space-x-4">
+            <span><i class=" fa-solid fa-magnifying-glass ml-2 mr-2"></i></span>
+            <span><i class="fa-solid fa-cart-shopping ml-2 mr-2"></i></span>
+          <button
+            class="flex items-center bg-lime-500 text-neutral-900 font-medium px-6 py-2 rounded-full hover:bg-lime-600 transition"
+          >
+            <span>Book Consult</span>
+            <svg
+              width="13.505737"
+              height="13.500488"
+              viewBox="0 0 13.5057 13.5005"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
             >
-              <li><a>Home</a></li>
-              <li><a>Services</a></li>
-              <li><a>Portfolio</a></li>
-              <li><a>Blogs</a></li>
-              <li><a>Contact Us</a></li>
-            </ul>
+              <desc>Created with Pixso.</desc>
+              <defs />
+              <path
+                id="Vector"
+                d="M11.75 1.75L0.75 12.74"
+                stroke="#1C1C1C"
+                stroke-opacity="1.000000"
+                stroke-width="1.500000"
+                stroke-linecap="round"
+              />
+              <path
+                id="Vector"
+                d="M5.75 0.88C5.75 0.88 11.39 0.4 12.24 1.26C13.1 2.11 12.62 7.75 12.62 7.75"
+                stroke="#1C1C1C"
+                stroke-opacity="1.000000"
+                stroke-width="1.500000"
+                stroke-linejoin="round"
+                stroke-linecap="round"
+              />
+            </svg>
+          </button>
           </div>
-          <a class="btn btn-ghost text-xl primary">Rinterio</a>
-        </div>
-        <div class="navbar-center hidden lg:flex">
-          <ul class="menu menu-horizontal px-1">
-            <li><a>Home</a></li>
-            <li><a>Services</a></li>
-            <li><a>Portfolio</a></li>
-            <li><a>Blogs</a></li>
-            <li><a>Contact Us</a></li>
-          </ul>
-        </div>
-        <div class="navbar-end">
-          <a class="btn">Button</a>
         </div>
       </div>
     </header>
